src/validation/tests/snapshots/rusty__validation__tests__pou_validation_tests__function_has_super_class.snap
---
source: src/validation/tests/pou_validation_tests.rs
expression: "&diagnostics"
---
error: A function cannot use EXTEND
  ┌─ <internal>:5:18
  │
5 │         FUNCTION func EXTENDS cls
  │                  ^^^^ A function cannot use EXTEND

error: Function Return type missing
  ┌─ <internal>:5:18
  │
5 │         FUNCTION func EXTENDS cls
  │                  ^^^^ Function Return type missing


